# jupyter-book-python

./: .buildinfo  .gitignore  README.md  _config.yml  _toc.yml  ahlive.html  box.html  class.html  collections_counter.html  comment-out-guide.html  cv2_imwrite.html  genindex.html  glob_basic.html  global.html  intro.html  intro.md  itertools.html  markdown-notebooks.html  markdown.html  name.html  newspaper.html  notebooks.html  np_basics.html  np_choice.html  np_clip.html  np_empty.html  np_full.html  np_logspace.html  np_math.html  np_normal.html  np_random.html  np_slice.html  np_vs_python.html  objects.inv  os_basic.html  pd_basic.html  pd_count_unique.html  pd_drop_add_column.html  pd_from_dict.html  pd_groupby.html  (+30 more)
.github/: pull_request_template.md.md
_build/.doctrees/: environment.pickle  intro.doctree
_build/html/: .buildinfo  genindex.html  intro.html  objects.inv  search.html  searchindex.js
_sources/notes/: jupyter_book.ipynb  np_basics.ipynb  python.ipynb  salary.ipynb  youtube_dl.ipynb
data/: np_sum.html  resize_images.html
drafts/: notebooks.ipynb  np_clip.ipynb  np_vs_python.ipynb  plt_figure.ipynb
environments/: Dockerfile  docker-compose.yaml
notes/: catan_prob.ipynb  jupyter_book.html  jupyter_book.md  plotly.ipynb  python.html  python.ipynb  radarchart.ipynb  salary.html  salary.ipynb  timm.html  timm.ipynb  tqdm.ipynb  youtube_dl.html  youtube_dl.ipynb
numpy/: np_basics.html  np_basics.ipynb  np_choice.html  np_intro.md  np_random.html  np_random.ipynb
pandas/: pd_basic.html  pd_basic.ipynb
python/: pair_grid.ipynb
python-book/: _config.yml  plt_cmap.ipynb  slack_webbhook.ipynb
(+267 files in other folders)
