[tool.poetry]
name = "jupyter-book-python"
version = "0.1.0"
description = ""
authors = ["akiralab <kawaiakira51@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
