[tool.poetry]
name = "jupyter-book-python"
version = "0.1.0"
description = ""
authors = ["akiralab <kawaiakira51@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
seaborn = "^0.12.2"
pycocotools = "^2.0.6"
torch = ">=1.7"
torchvision = "0.15.1"
dash = "^2.11.1"
altair = "^5.0.1"
vega-datasets = "^0.9.0"
nbformat = "4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
