[tool.poetry]
name = "jupyter-book-python"
version = "0.1.0"
description = ""
authors = ["akiralab <kawaiakira51@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
seaborn = "^0.12.2"
pycocotools = "^2.0.6"
torch = ">=1.7"
torchvision = "0.15.1"
dash = "^2.11.1"
altair = "^5.0.1"
vega-datasets = "^0.9.0"
nbformat = "^5.9.1"
flake8 = ">=5.0.0"
ghp-import = "^2.1.0"
jupyter-book = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
